# backend/users/models.py
@@ -49,11 +49,7 @@ class User(AbstractUser):
         max_length=150,
         verbose_name="Пароль"
     )
-    is_subscribed = models.BooleanField(
-        default=False,
-        verbose_name="Подписка на пользователя"
-    )
-
+    
     class Meta:
         verbose_name = "Пользователь"
         verbose_name_plural = "Пользователи"
@@ -68,37 +64,3 @@ class User(AbstractUser):
     @property
     def is_admin(self):
         return self.role == self. ADMIN or self.is_superuser
-
-
-class Subscription(models.Model):
-    """Создание модели подписки."""
-
-    user = models.ForeignKey(
-        User,
-        on_delete=models.CASCADE,
-        related_name="follower",
-        verbose_name="Подписчик"
-    )
-    author = models.ForeignKey(
-        User,
-        on_delete=models.CASCADE,
-        related_name="following_author",
-        verbose_name="Автор",
-        default=None
-    )
-
-    class Meta:
-        verbose_name = "Подписка"
-        verbose_name_plural = "Подписки"
-        constraints = [
-            models.UniqueConstraint(
-                fields=['user', 'author'],
-                name='unique_follow'
-            )
-        ]
-
-    def __str__(self):
-        return (
-            f'Пользователь: {self.user.username} '
-            f'подписан на {self.author.username}'
-        )
